force-app/main/default/objects/Product2/fields/AvailableForSaleDate__c.field-meta.xml
<CustomField>
    <fullName>AvailableForSaleDate__c</fullName>
    <description>Available For Sale Date</description>
    <label>AvailableForSaleDate</label>
    <type>Date</type>
</CustomField>