force-app/main/default/objects/Product2/fields/CategoryId__c.field-meta.xml
<CustomField>
    <fullName>CategoryId__c</fullName>
    <description>Category Id</description>
    <label>CategoryId</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>