force-app/main/default/objects/Product2/fields/cgcloud__Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Category__c</fullName>
    <description>Product category.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Chips</fullName>
            </value>
            <value>
                <fullName>Computers</fullName>
            </value>
            <value>
                <fullName>Detergent</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>