force-app/main/default/objects/Product2/fields/ColorId__c.field-meta.xml
<CustomField>
    <fullName>ColorId__c</fullName>
    <label>ColorId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>