force-app/main/default/objects/Product2/fields/SizeUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>SizeUnitOfMeasure__c</fullName>
    <description>Size Unit Of Measure</description>
    <label>SizeUnitOfMeasure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Values</fullName>
            </value>
            <value>
                <fullName>meters</fullName>
            </value>
            <value>
                <fullName>centimeters</fullName>
            </value>
            <value>
                <fullName>millimeters</fullName>
            </value>
            <value>
                <fullName>feet</fullName>
            </value>
            <value>
                <fullName>inches</fullName>
            </value>
            <value>
                <fullName>yards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>