force-app/main/default/objects/Product2/fields/SizeUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>SizeUnitOfMeasureId__c</fullName>
    <description>Size Unit Of Measure Id</description>
    <label>SizeUnitOfMeasureId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>