force-app/main/default/objects/Product2/fields/StopSaleDate__c.field-meta.xml
<CustomField>
    <fullName>StopSaleDate__c</fullName>
    <description>Stop Sale Date</description>
    <label>StopSaleDate</label>
    <type>Date</type>
</CustomField>