force-app/main/default/objects/Product2/fields/WeightUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>WeightUnitOfMeasure__c</fullName>
    <description>Weight Unit Of Measure</description>
    <label>WeightUnitOfMeasure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kilograms</fullName>
            </value>
            <value>
                <fullName>grams</fullName>
            </value>
            <value>
                <fullName>milligrams</fullName>
            </value>
            <value>
                <fullName>ounces</fullName>
            </value>
            <value>
                <fullName>pounds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>