force-app/main/default/objects/Product2/fields/WeightUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>WeightUnitOfMeasureId__c</fullName>
    <description>Weight Unit Of Measure Id</description>
    <label>WeightUnitOfMeasureId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>