force-app/main/default/objects/Product2/recordTypes/cgcloud__Product.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Product</fullName>
    <active>true</active>
    <description>This record type is for creating CGCloud Products</description>
    <label>Product</label>
</RecordType>