force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>cgcloud__Description_1_Language_1__c</columns>
    <columns>cgcloud__Product_Template__c</columns>
    <columns>cgcloud__GTIN__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>cgcloud__Criterion_1_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cgcloud__Product_Template__c</field>
        <operation>equals</operation>
        <value>Product</value>
    </filters>
    <label>All Products</label>
</ListView>